Sellers Cards and others

--- a/resources/css/filament/admin/theme.css
+++ b/resources/css/filament/admin/theme.css
@@ -1,4 +1,7 @@
 @import "/vendor/filament/filament/resources/css/theme.css";
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
 
 @config 'tailwind.config.js';
 
